# testing_assignment

./: .gitattributes  CIFAR-100 testing.ipynb  README.md
fraud-detection/: credit_card.ipynb
js-cov/: package-lock.json  package.json
js-cov/src/: coverage.ts
js-mutest/: package-lock.json
js-mutest/src/: impl.ts
project/fraud-detection/: Credit Card.ipynb
project/image/: CIFAR-10.ipynb  Handwrite.ipynb
project/rust-cov/: Cargo.toml
project/rust-cov/example/: branch.rs  chk_difficult_if.rs  func.rs  if-let.rs  switch.rs
project/rust-cov/result/: b.py  result.txt
project/rust-cov/src/: main.rs
project/rust-llvm/: cargo.toml  default_5851747727795529491_0_77834.profraw  default_6288737894396508800_0_48740.profraw  default_6873500016831139835_0_61705.profraw  main  main.mir  main.txt  main_giveOption.mir  main_noOption.mir
rust-cov/example/: _sort.rs  binary_op.rs  branch.rs  chk_if.rs  loop.rs  macro.rs  sort.rs  switch.rs
rust-cov/result/: __.txt  ast_result.txt  b.py  llvm_result.txt  result.txt
rust-cov/src/: chk.txt  coverage.rs  main.rs
rust-llvm/: cargo.toml  main  main.mir  parsing_1.py  tarpaulin-report.html
rust-llvm/mir_dump/: core.ops-function-FnOnce-call_once.001-000.MentionedItems.after.mir  core.ops-function-FnOnce-call_once.001-000.MentionedItems.before.mir  core.ops-function-FnOnce-call_once.001-006.AddCallGuards.after.mir  core.ops-function-FnOnce-call_once.001-006.AddCallGuards.before.mir  core.ops-function-FnOnce-call_once.006-000.runtime-optimized.after.mir  core.ptr-drop_in_place.001-001.AddMovesForPackedDrops.before.mir  (+939 more)
(+880 files in other folders)
