[package]
name = "rust-cov"
version = "0.6.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.58", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = { version = "1.0.79", features = ["span-locations"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chalk_rs = "1.0.0"
